--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="PHY OTA"
+            android:text="OTA APP"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold" />
