--- a/app/src/main/res/layout/dialog_aes.xml
+++ b/app/src/main/res/layout/dialog_aes.xml
@@ -42,13 +42,13 @@
             android:layout_height="0.5dp"
             android:background="@color/line" />
         <TextView
-            android:id="@+id/tv_search_device"
+            android:id="@+id/tv_start_upgrade"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:foreground="?attr/selectableItemBackground"
             android:gravity="center"
             android:padding="12dp"
-            android:text="搜索设备"
+            android:text="开始升级"
             android:textColor="@color/black"
             android:textSize="16sp" />
     </LinearLayout>
